[gd_scene format=3 load_steps=4 uid="uid://sessionroot"]

[ext_resource type="Script" path="res://scripts/gameplay/session_root.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/session/CustomerQueue.tscn" id="2"]
[ext_resource type="PackedScene" path="res://ui/components/OrderBanner.tscn" id="3"]
[ext_resource type="PackedScene" path="res://ui/components/PatienceMeter.tscn" id="4"]

[node name="SessionRoot" type="Node3D"]
script = ExtResource("1")

[node name="CustomerQueue" parent="." instance=ExtResource("2")]
unique_name_in_owner = true

[node name="UI" type="CanvasLayer" parent="."]
layer = 1

[node name="OrderBanner" parent="UI" instance=ExtResource("3")]
unique_name_in_owner = true

[node name="PatienceMeter" parent="UI" instance=ExtResource("4")]
unique_name_in_owner = true
anchor_left = 0.65
anchor_right = 0.95
anchor_top = 0.04
anchor_bottom = 0.18
